# nanoclaw

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  README.md
apps/: Cargo.toml
apps/agent-core-tui/: Cargo.toml
apps/agent-core-tui/src/: app.rs  boot.rs  command.rs  config.rs  lib.rs  main.rs
apps/code-agent/: .env.example  Cargo.toml  README.md
apps/code-agent-example/: Cargo.toml  README.md
apps/code-agent-example/src/: main.rs
apps/code-agent-example/src/tui/: approval.rs  mod.rs  observer.rs  render.rs  state.rs
apps/code-agent/crates/backend/: Cargo.toml
apps/code-agent/crates/config/: Cargo.toml
apps/code-agent/crates/contracts/: Cargo.toml
apps/code-agent/crates/tui/: Cargo.toml
apps/code-agent/skills/: CUSTOM_BUILTIN_SKILLS.txt  UPSTREAM_OPENAI_SKILLS.txt
apps/code-agent/skills/codebase-inspection/: SKILL.md
apps/code-agent/skills/ebpf-performance-engineering/: SKILL.md
apps/code-agent/skills/github-code-review/: SKILL.md
apps/code-agent/skills/linux-performance-analysis/: SKILL.md
apps/code-agent/src/: config.rs  main.rs  management_tui.rs  options.rs  preview.rs  provider.rs  statusline.rs  theme.rs  tool_render.rs
apps/code-agent/themes/: defaults.toml
apps/reference-tui/: Cargo.toml
apps/reference-tui/examples/: agent-core.toml.example  core.toml.example  reference-tui.toml.example
apps/reference-tui/src/: app.rs  boot.rs  config.rs  lib.rs  main.rs  render.rs  test_support.rs
apps/sched-claw/: .env.example  Cargo.toml  README.md
apps/sched-claw/docs/: sched-ext-industrial-and-autotuning-notes.md
apps/sched-claw/scripts/: smoke-daemon-e2e.sh  start-root-daemon.sh
apps/sched-claw/src/: app_config.rs  bootstrap.rs  build_capture.rs  builtin_skills.rs  candidate_templates.rs  daemon_client.rs  daemon_inspection.rs  daemon_projection.rs  daemon_protocol.rs  daemon_server.rs  daemon_tool.rs  deployment.rs  display.rs  doctor.rs  experiment.rs  history.rs  lib.rs  main.rs  metrics.rs  preamble.rs  repl.rs  run_capture.rs  startup_catalog.rs  workload.rs
apps/sched-claw/tests/: daemon_e2e.rs  demo_scripts.rs  skill_scripts.rs
crates/: Cargo.toml
crates/agent-core/: Cargo.toml
crates/agent-core-mcp/: Cargo.toml
crates/agent-core-mcp/src/: bridge.rs  catalog.rs  client.rs  error.rs  lib.rs
crates/agent-core-mcp/tests/: stdio_integration.rs
crates/agent-core-rig/: Cargo.toml
crates/agent-core-rig/src/: backend.rs  capabilities.rs  error.rs  lib.rs  mapping.rs  openai_responses.rs
crates/agent-core-runtime/: Cargo.toml
crates/agent-core-runtime/src/: approval.rs  backend.rs  builder.rs  compaction.rs  control.rs  error.rs  lib.rs  loop_detection.rs  observer.rs  runtime.rs  session.rs  subagent.rs  transcript.rs
crates/agent-core-skills/: Cargo.toml
crates/agent-core-skills/src/: frontmatter.rs  lib.rs  loader.rs
crates/agent-core-store/: Cargo.toml
crates/agent-core-store/src/: file.rs  lib.rs  memory.rs  replay.rs  traits.rs
crates/agent-core-tools/: Cargo.toml
crates/agent-core-tools/src/: annotations.rs  context.rs  error.rs  lib.rs  mcp_adapter.rs  registry.rs  schema.rs
crates/agent-core-types/: Cargo.toml
crates/agent-core-types/src/: error.rs  event.rs  id.rs  message.rs  tool.rs
crates/agent-core/examples/: minimal_runtime.rs
crates/agent-core/src/: builder.rs  lib.rs  prelude.rs
crates/config/: Cargo.toml
crates/config/src/: core.rs
crates/core/: Cargo.toml
crates/core/examples/: minimal_runtime.rs
crates/core/src/: builder.rs  custom_tools.rs  lib.rs  plugin_boot.rs  prelude.rs  workspace_layout.rs
crates/env/: Cargo.toml
crates/env/src/: lib.rs
crates/evals/: Cargo.toml
crates/evals/src/: builtins.rs  context.rs  evaluator.rs  lib.rs  registry.rs  result.rs
crates/inference/: Cargo.toml
crates/inference/src/: config.rs  error.rs  http.rs  lib.rs  models.rs  traits.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: bridge.rs  catalog.rs  client.rs  config.rs  error.rs
crates/mcp/tests/: stdio_integration.rs
crates/memory/: Cargo.toml
crates/memory/src/: auto_index.rs  backend.rs  config.rs  corpus.rs  error.rs  lexical_index.rs  lib.rs  managed_files.rs  memory_core.rs  memory_embed.rs  promotion.rs  retention.rs  retrieval_policy.rs  runtime_exports.rs  state.rs  tools.rs  vector_store.rs
crates/meta/: Cargo.toml
crates/meta/src/: archive.rs  benchmark.rs  candidate.rs  corpus.rs  critic.rs  experiment.rs  git_gate.rs  improve.rs  lib.rs  miner.rs  promotion.rs  proposal.rs  replay.rs  rollback.rs  runner_trace.rs  signals.rs  tasks.rs  verifier.rs  worktree_runner.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: config.rs  discovery.rs  error.rs  lib.rs  manifest.rs  resolution.rs
crates/provider/: Cargo.toml
crates/provider/src/: anthropic.rs  backend.rs  capabilities.rs  error.rs  lib.rs  mapping.rs  openai.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent_mailbox.rs  agent_session_manager.rs  approval.rs  augmentor.rs  backend.rs  builder.rs  compaction.rs  control.rs  error.rs  host_runtime.rs  lib.rs  loop_detection.rs  observer.rs  permissions.rs  runtime.rs  session.rs  subagent.rs  subagent_impl.rs  transcript.rs  write_lease.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: error.rs  lib.rs  manager.rs  network_proxy.rs  policy.rs
crates/sandbox/tests/: network_proxy_integration.rs
crates/skills/: Cargo.toml
crates/skills/src/: catalog.rs  error.rs  frontmatter.rs  lib.rs  loader.rs  model.rs
crates/store/: Cargo.toml
crates/store/src/: file.rs  lib.rs  memory.rs  replay.rs  traits.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: annotations.rs  browser.rs  checkpoint.rs  context.rs  error.rs  file_activity.rs  lib.rs  mcp_adapter.rs  permissions.rs  registry.rs  session_control.rs  user_input.rs
crates/tools/tests/: network_proxy_integration.rs  sandbox_integration.rs
crates/types/: Cargo.toml
crates/types/src/: artifact.rs  event.rs  experiment.rs  hook.rs  id.rs  lib.rs  message.rs  signal.rs  tool.rs  usage.rs
(+482 files in other folders)
