[workspace]
default-members = ["code-agent"]
members = [
    "code-agent",
    "code-agent/crates/backend",
    "code-agent/crates/config",
    "code-agent/crates/contracts",
    "code-agent/crates/tui",
    "sched-claw/crates/daemon-core",
    "sched-claw/crates/daemon-protocol",
    "sched-claw/crates/domain",
    "sched-claw/crates/execution",
    "sched-claw",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
agent-env = { path = "../crates/env" }
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm", "underline-color"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
toml = "0.8.23"
tracing = "0.1.41"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
