[workspace]
default-members = [
    "core",
    "env",
    "memory",
    "mcp",
    "plugins",
    "provider",
    "runtime",
    "skills",
    "store",
    "tools",
    "types",
]
members = [
    "core",
    "env",
    "memory",
    "mcp",
    "plugins",
    "provider",
    "runtime",
    "skills",
    "store",
    "tools",
    "types",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
crossterm = "0.29.0"
dotenvy = "0.15.7"
eventsource-stream = "0.2.3"
futures = "0.3.31"
globset = "0.4.18"
http = "1.3.1"
ignore = "0.4.25"
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "json", "rustls-tls", "stream"] }
rmcp = { version = "1.2.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "elicitation"] }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
toml = "0.8.23"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
wiremock = "0.6.5"
agent-env = { path = "env" }
