[package]
name = "agent-core-tui"
edition = "2024"
license = "MIT"
version = "0.1.0"

[features]
default = []
web-tools = ["agent-core/web-tools", "agent-core-tools/web-tools"]

[dependencies]
agent-core = { path = "../../crates/agent-core" }
agent-core-runtime = { path = "../../crates/agent-core-runtime" }
agent-core-store = { path = "../../crates/agent-core-store" }
agent-core-tools = { path = "../../crates/agent-core-tools" }
agent-core-types = { path = "../../crates/agent-core-types" }
anyhow = "1.0.100"
async-trait = "0.1.89"
crossterm = "0.29.0"
dotenvy = "0.15.7"
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.23.0"
