[package]
name = "code-agent"
edition = "2024"
license = "MIT"
version = "0.1.0"

[dependencies]
agent-env = { path = "../../crates/env" }
agent = { path = "../../crates/core", features = ["agentic-tools", "code-intel", "web-tools"] }
nanoclaw-config = { path = "../../crates/config" }
store = { path = "../../crates/store" }
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.31"
ratatui = "0.29.0"
ratatui-core = "0.1.0"
shlex = "1.3.0"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
toml = "0.8.23"
toml_edit = "0.22.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tui-markdown = "0.3.7"
unicode-width = "0.2.0"

[dev-dependencies]
tempfile = "3.23.0"
