[package]
name = "code-agent"
edition = "2024"
license = "MIT"
version = "0.1.0"

[features]
default = []
memory-embed = ["agent/memory-embed"]
notebook-tools = ["agent/notebook-tools", "code-agent-backend/notebook-tools"]

[dependencies]
agent-env = { path = "../../crates/env" }
agent = { path = "../../crates/core", features = ["agentic-tools", "code-intel", "web-tools"] }
code-agent-backend = { path = "crates/backend" }
code-agent-config = { path = "crates/config" }
code-agent-contracts = { path = "crates/contracts" }
code-agent-tui = { path = "crates/tui" }
nanoclaw-config = { path = "../../crates/config" }
store = { path = "../../crates/store" }
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.28.1"
futures = "0.3.31"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm", "underline-color"] }
ratatui-core = "0.1.0"
shlex = "1.3.0"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tempfile = "3.23.0"
toml = "0.8.23"
toml_edit = "0.22.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# Transcript fenced blocks depend on span-level syntax colors from tui-markdown.
tui-markdown = { version = "0.3.7", default-features = false, features = ["highlight-code"] }
unicode-width = "0.2.0"

[dev-dependencies]
