[package]
name = "reference-tui"
edition = "2024"
license = "MIT"
version = "0.1.0"

[features]
default = []
web-tools = ["agent/web-tools", "tools/web-tools"]

[dependencies]
agent = { path = "../../crates/core" }
runtime = { path = "../../crates/runtime" }
store = { path = "../../crates/store" }
tools = { path = "../../crates/tools" }
types = { path = "../../crates/types" }
anyhow = "1.0.100"
async-trait = "0.1.89"
crossterm = "0.29.0"
dotenvy = "0.15.7"
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.23.0"
