[package]
name = "sched-claw"
edition = "2024"
license = "MIT"
version = "0.1.0"
default-run = "sched-claw"

[dependencies]
agent = { path = "../../crates/core", features = ["agentic-tools", "web-tools"] }
agent-env = { path = "../../crates/env" }
code-agent-backend = { path = "../code-agent/crates/backend", default-features = false }
nanoclaw-config = { path = "../../crates/config" }
sched-claw-daemon-core = { path = "crates/daemon-core" }
sched-claw-daemon-protocol = { path = "crates/daemon-protocol" }
sched-claw-domain = { path = "crates/domain" }
sched-claw-execution = { path = "crates/execution" }
store = { path = "../../crates/store" }
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.38", features = ["derive"] }
include_dir = "0.7.4"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
toml = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
unicode-width = "0.2.0"

[dev-dependencies]
tempfile = "3.23.0"
