[package]
name = "agent-core-rig"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agent-core-runtime = { path = "../agent-core-runtime" }
agent-core-types = { path = "../agent-core-types" }
async-stream.workspace = true
async-trait.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rig = { package = "rig-core", version = "0.33.0", default-features = false, features = ["reqwest-rustls"] }

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
