[package]
name = "agent-core-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
agentic-tools = ["agent-core-tools/agentic-tools"]

[dependencies]
agent-core-skills = { path = "../agent-core-skills" }
agent-core-store = { path = "../agent-core-store" }
agent-core-tools = { path = "../agent-core-tools" }
agent-core-types = { path = "../agent-core-types" }
async-trait.workspace = true
futures.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
