[package]
name = "agent-core-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agent-core-types = { path = "../agent-core-types" }
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
