[package]
name = "agent-core-tools"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
agentic-tools = []
code-intel = []
web-tools = ["dep:reqwest"]

[dependencies]
agent-core-types = { path = "../agent-core-types" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
reqwest = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
