[package]
name = "agent-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
agentic-tools = [
    "agent-core-runtime/agentic-tools",
    "agent-core-tools/agentic-tools",
]
web-tools = ["agent-core-tools/web-tools"]

[dependencies]
agent-core-mcp = { path = "../agent-core-mcp" }
agent-core-rig = { path = "../agent-core-rig" }
agent-core-runtime = { path = "../agent-core-runtime" }
agent-core-skills = { path = "../agent-core-skills" }
agent-core-store = { path = "../agent-core-store" }
agent-core-tools = { path = "../agent-core-tools" }
agent-core-types = { path = "../agent-core-types" }

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
