[package]
name = "nanoclaw-config"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agent = { path = "../core" }
agent-env = { path = "../env" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
