[package]
name = "agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
agentic-tools = [
    "runtime/agentic-tools",
    "tools/agentic-tools",
]
code-intel = ["tools/code-intel"]
memory-embed = ["memory/memory-embed"]
web-tools = ["tools/web-tools"]

[dependencies]
agent-env = { path = "../env" }
inference = { path = "../inference" }
memory = { path = "../memory" }
mcp = { path = "../mcp" }
plugins = { path = "../plugins" }
provider = { path = "../provider" }
runtime = { path = "../runtime" }
skills = { path = "../skills" }
store = { path = "../store" }
tools = { path = "../tools" }
types = { path = "../types" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tempfile.workspace = true
tokio.workspace = true
