[package]
name = "evals"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
types = { path = "../types" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
nanoclaw-test-support = { path = "../test-support" }
