[package]
name = "memory"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
store = { path = "../store" }
tools = { path = "../tools" }
types = { path = "../types" }
async-trait.workspace = true
futures.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
rusqlite.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
nanoclaw-test-support = { path = "../test-support" }
tempfile.workspace = true
