[package]
name = "meta"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
evals = { path = "../evals" }
store = { path = "../store" }
types = { path = "../types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
nanoclaw-test-support = { path = "../test-support" }
tempfile.workspace = true
