[package]
name = "provider"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agent-env.workspace = true
runtime = { path = "../runtime" }
types = { path = "../types" }
async-stream.workspace = true
async-trait.workspace = true
error-stack.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
