[package]
name = "sandbox"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
types = { path = "../types" }
dashmap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
seccompiler.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
