[package]
name = "store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
types = { path = "../types" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
