[package]
name = "store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
types = { path = "../types" }
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
nanoclaw-test-support = { path = "../test-support" }
tempfile.workspace = true
