[package]
name = "tools"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
agentic-tools = []
code-intel = []
web-tools = ["dep:reqwest", "dep:scraper", "dep:quick-xml", "dep:time"]

[dependencies]
agent-env.workspace = true
sandbox.workspace = true
skills = { path = "../skills" }
types = { path = "../types" }
async-trait.workspace = true
base64.workspace = true
dashmap.workspace = true
globset.workspace = true
ignore.workspace = true
notify.workspace = true
regex.workspace = true
reqwest = { workspace = true, optional = true }
rquickjs.workspace = true
scraper = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
nanoclaw-test-support = { path = "../test-support" }
tempfile.workspace = true
wiremock.workspace = true
