[package]
name = "code-agent-config"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agent = { path = "../../../../crates/core", features = ["agentic-tools", "code-intel", "web-tools"] }
agent-env.workspace = true
anyhow.workspace = true
code-agent-contracts = { path = "../contracts" }
include_dir = "0.7.4"
nanoclaw-config = { path = "../../../../crates/config" }
serde.workspace = true
shlex.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit = "0.22.27"
