[package]
name = "code-agent-tui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agent = { path = "../../../../crates/core", features = ["agentic-tools", "code-intel", "web-tools"] }
anyhow.workspace = true
base64.workspace = true
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.38", features = ["derive"] }
code-agent-backend = { path = "../backend" }
code-agent-config = { path = "../config" }
code-agent-contracts = { path = "../contracts" }
crossterm = "0.28.1"
futures.workspace = true
ratatui.workspace = true
ratatui-core = "0.1.0"
serde_json.workspace = true
shlex.workspace = true
store = { path = "../../../../crates/store" }
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tui-markdown = { version = "0.3.7", default-features = false, features = ["highlight-code"] }
unicode-width = "0.2.0"
